Add dialog to add url filter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DaggerSandBox</string>
+    <string name="cancel">キャンセル</string>
+    <string name="filter_candidate">フィルタを選択してください</string>
 </resources>
