--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DaggerSandBox</string>
     <string name="cancel">キャンセル</string>
     <string name="filter_candidate">フィルタを選択してください</string>
+    <string name="add_filter_done">%sを追加しました</string>
 </resources>
