--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_filter_done">%sを追加しました</string>
     <string name="edit_filter">フィルタを編集</string>
     <string name="before_hours">%d時間前</string>
+    <string name="share_url">URLを共有</string>
 </resources>
