--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="edit_filter">フィルタを編集</string>
     <string name="before_hours">%d時間前</string>
     <string name="share_url">URLを共有</string>
+    <string name="licenses">オープンソースライセンス</string>
+    <string name="close">閉じる</string>
 </resources>
