--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="close">閉じる</string>
     <string name="move_to_the_site">サイトへ移動</string>
     <string name="add_filter">フィルタを追加</string>
-    <string name="delete_done">削除しました</string>
+    <string name="delete_done">%sを削除しました</string>
 </resources>
