--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="add_filter">フィルタを追加</string>
     <string name="delete_done">%sを削除しました</string>
     <string name="reload_feeds">更新</string>
+    <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
 </resources>
