--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
     <string name="new_contents_fetched">新着記事を取得しました。</string>
     <string name="no_comments">コメントはありません</string>
+    <string name="bottom_navigation_feed_list">一覧</string>
+    <string name="bottom_navigation_archive">アーカイブ</string>
+    <string name="bottom_navigation_favorite">お気に入り</string>
+    <string name="bottom_navigation_settings">設定</string>
+    <string name="inbox_is_empty">未読の記事はありません</string>
+    <string name="check_new_feed">新着記事をチェックする</string>
 </resources>
