--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
     <string name="new_contents_fetched">新着記事を取得しました。</string>
     <string name="no_comments">コメントはありません</string>
+    <string name="disallow_comments">コメント非表示設定の記事です</string>
     <string name="bottom_navigation_feed_list">一覧</string>
     <string name="bottom_navigation_archive">アーカイブ</string>
     <string name="bottom_navigation_favorite">お気に入り</string>
