--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="bottom_navigation_settings">設定</string>
     <string name="inbox_is_empty">未読の記事はありません</string>
     <string name="check_new_feed">新着記事をチェックする</string>
+    <string name="archived_feed_is_empty">アーカイブ済みの記事はありません</string>
 </resources>
