--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="archived_feed_is_empty">アーカイブ済みの記事はありません</string>
     <string name="fetch_comment_error">コメント取得に失敗しました</string>
     <string name="retry">リトライ</string>
+    <string name="checkbox_show_new_feed">新着記事を表示する</string>
+    <string name="checkbox_show_archive_feed">アーカイブした記事を表示する</string>
+    <string name="checkbox_show_favorite_feed">お気に入り記事を表示する</string>
+    <string name="menu_feed_list_filter">表示する記事</string>
 </resources>
