[WIP] Add FilterListFragment to show filter information
どんなフィルタが登録されているか、フィルタで引っかかった記事がいくつあるかを表示・管理する

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="checkbox_show_archive_feed">アーカイブした記事を表示する</string>
     <string name="checkbox_show_favorite_feed">お気に入り記事を表示する</string>
     <string name="menu_feed_list_filter">表示する記事</string>
+    <string name="filter_is_empty">フィルタは登録されていません</string>
 </resources>
