Show filtered feed information and delete ArchiveFilter
追加したフィルタとそのフィルタにかかっている記事の数を表示
アーカイブした記事は記事一覧で確認できるようにするためArchiveFeedFragmentは不要

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="bottom_navigation_archive">アーカイブ</string>
     <string name="bottom_navigation_favorite">お気に入り</string>
     <string name="bottom_navigation_settings">設定</string>
+    <string name="bottom_navigation_filter">フィルタ管理</string>
     <string name="inbox_is_empty">未読の記事はありません</string>
     <string name="check_new_feed">新着記事をチェックする</string>
     <string name="archived_feed_is_empty">アーカイブ済みの記事はありません</string>
