--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="add_filter">フィルタを追加</string>
     <string name="delete">削除</string>
     <string name="delete_done">%sを削除しました</string>
+    <string name="delete_filter">フィルタを解除しました</string>
     <string name="reload_feeds">更新</string>
     <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
     <string name="new_contents_fetched">新着記事を取得しました。</string>
