Remove hardcoded text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="edit_filter">フィルタを編集</string>
     <string name="before_hours">%d時間前</string>
     <string name="share_url">URLを共有</string>
-    <string name="licenses">オープンソースライセンス</string>
+    <string name="licenses">オープンソースライセンス表記</string>
     <string name="close">閉じる</string>
     <string name="move_to_the_site">サイトへ移動</string>
     <string name="add_filter">フィルタを追加</string>
