--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="delete_filter">フィルタを解除しました</string>
     <string name="reload_feeds">更新</string>
     <string name="new_contents_dose_not_exist">新しい記事はありませんでした。</string>
-    <string name="new_contents_fetched">新着記事を取得しました。</string>
+    <string name="new_contents_fetched">新着記事</string>
+    <string name="new_contents_count">%d件の新着記事を取得しました</string>
     <string name="got_comments">%d件のコメント</string>
     <string name="no_comments">コメントはありません</string>
     <string name="disallow_comments">コメント非表示設定の記事です</string>
@@ -35,4 +36,9 @@
     <string name="checkbox_show_favorite_feed">お気に入り記事を表示する</string>
     <string name="menu_feed_list_filter">表示する記事</string>
     <string name="filter_is_empty">フィルタは登録されていません</string>
+
+    <string name="notification_channel_title_default">アプリからのお知らせ</string>
+    <string name="notification_channel_description_default">アプリからの一般的な通知を表示するチャンネルです。</string>
+    <string name="notification_channel_title_new_feed">新着記事のお知らせ</string>
+    <string name="notification_channel_description_new_feed">新着記事を検知した場合にお知らせするチャンネルです。</string>
 </resources>
